--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "grammy": "^1.20.0",
-    "@supabase/supabase-js": "^2.39.0",
-    "dotenv": "^16.3.0"
+  "node-telegram-bot-api": "^0.64.0",
+  "express": "^4.18.2",
+  "@supabase/supabase-js": "^2.39.0"
   }
-    }
+  
     
