--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://tu-sitio-web.com",
+  "url": "https://nyper95.github.io/ton-city-game/",
   "name": "Ton City",
-  "iconUrl": "https://tu-sitio-web.com/icon.png"
+  "iconUrl": "https://nyper95.github.io/ton-city-game/icon.png"
 }
