--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "ton-city",
+  "name": "ton-city-reward-api",
   "version": "1.0.0",
-  "description": "Ton City Game",
-  "main": "index.js",
+  "main": "api/server.js",
   "scripts": {
-    "start": "npx serve ."
+    "start": "node api/server.js"
   },
   "dependencies": {
-    "serve": "^14.2.0"
+    "express": "^4.18.2",
+    "@supabase/supabase-js": "^2.39.0"
   }
 }
