--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ton-city-reward-api",
   "version": "1.0.0",
-  "main": "api/server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node api/server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
