--- a/package.json
+++ b/package.json
@@ -1,12 +1,34 @@
 {
   "name": "ton-city-reward-api",
-  "version": "1.0.0",
+  "version": "2.0.0",
+  "description": "API para Ton City Game - Adsgram Rewards, Recompensas Diarias y Retiros Semanales",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "@supabase/supabase-js": "^2.39.0"
-  }
+    "@supabase/supabase-js": "^2.39.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "axios": "^1.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "keywords": [
+    "ton",
+    "telegram",
+    "adsgram",
+    "game",
+    "daily-rewards",
+    "blockchain",
+    "crypto"
+  ],
+  "author": "Ton City",
+  "license": "MIT"
 }
