--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon server.js"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -20,15 +20,6 @@
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": [
-    "ton",
-    "telegram",
-    "adsgram",
-    "game",
-    "daily-rewards",
-    "blockchain",
-    "crypto"
-  ],
   "author": "Ton City",
   "license": "MIT"
 }
