--- a/package.json
+++ b/package.json
@@ -1,34 +1,17 @@
 {
   "name": "ton-city-reward-api",
-  "version": "2.0.0",
-  "description": "API para Ton City Game - Adsgram Rewards, Recompensas Diarias y Retiros Semanales",
+  "version": "3.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "engines": {
-    "node": "18.x"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "@supabase/supabase-js": "^2.39.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "axios": "^1.6.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "keywords": [
-    "ton",
-    "telegram",
-    "adsgram",
-    "game",
-    "daily-rewards",
-    "blockchain",
-    "crypto"
-  ],
-  "author": "Ton City",
-  "license": "MIT"
+    "ton": "^13.9.0",
+    "ton-crypto": "^3.2.0",
+    "ton-core": "^0.49.1",
+    "@orbs-network/ton-access": "^2.3.3",
+    "dotenv": "^16.3.1"
+  }
 }
