--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ton-city-reward-api",
-  "version": "3.0.3",
+  "version": "4.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -8,10 +8,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "@supabase/supabase-js": "^2.39.0",
-    "ton": "^13.9.0",
-    "ton-crypto": "^3.2.0",
-    "ton-core": "^0.53.0",
-    "@orbs-network/ton-access": "^2.3.3",
+    "@ton/ton": "^16.2.2",
+    "@ton/crypto": "^3.2.0",
+    "@ton/core": "^0.56.0",
     "dotenv": "^16.3.1"
   }
 }
