--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ton-city-reward-api",
-  "version": "4.0.1",
+  "version": "4.0.2",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -8,9 +8,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "@supabase/supabase-js": "^2.39.0",
-    "@ton/ton": "^15.0.0",
-    "@ton/crypto": "^3.2.0",
-    "@ton/core": "^0.56.0",
+    "@ton/ton": "14.4.0",
+    "@ton/crypto": "3.2.0",
+    "@ton/core": "0.56.3",
     "dotenv": "^16.3.1"
   }
 }
