--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "@supabase/supabase-js": "^2.39.0",
-    "@ton/ton": "14.1.0",
-    "@ton/crypto": "3.2.0",
-    "@ton/core": "0.56.0",
+    "@ton/ton": "^13.9.0",
+    "@ton/crypto": "^3.2.0",
+    "@ton/core": "^0.53.0",
     "dotenv": "^16.3.1"
   }
 }
